Implement watchlist base structure and main functions
