# backend/StockManager/StockManager.DataContext/Entities/WatchListItem.cs
@@ -7,7 +7,7 @@
         public Stock Stock { get; set; }
         public int WatchListId { get; set; }
         public WatchList WatchList { get; set; }
-        public double EntryPrice { get; set; }
+        public double? EntryPrice { get; set; }
         public string? Note { get; set; }
     }    
 }
